--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/21.5.26/miui_BEGONIA_21.5.26_8e148f9c89_11.0.zip
+  ROM_URL: https://bigota.d.miui.com/V12.0.5.0.QGGCNXM/miui_BEGONIA_V12.0.5.0.QGGCNXM_13dc64c58b_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
